Form Binding Exercise, research delete.

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -4,16 +4,21 @@
 <body>
 <div th:replace="fragments/navbar :: myNav"></div>
 
-<form th:action="@{/posts/create}" th:method="post" th:object="${post}">
-    Title:
-    <input th:field="*{title}" />
+<form class="create" th:action="@{/posts/create}" th:method="post" th:object="${post}">
+    <div class="form-group">
+    <label for="title">Title:</label>
+    <input class="form-control" id="title" th:field="*{title}" />
+    </div>
     <br />
-    Description:
-    <input th:field="*{body}" />
+    <div class="form-group">
+    <label for="body">Body:</label>
+    <textarea class="form-control" id="body" th:field="*{body}" rows="3"></textarea>
     <br />
-    <input type="submit" />
+    </div>
+    <button type="submit" class="btn btn-primary mb-2">Submit</button>
 </form>
 
 <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
+
