--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8" />
         <title th:text="${title}"></title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  />
-        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="/css/styles.css" />
     </div>
 
 </description>
