--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -3,13 +3,19 @@
 <head th:replace="fragments/header :: head('Post')"></head>
 <description>
     <div th:replace="fragments/navbar :: myNav"></div>
-    <h1>The show page</h1>
-
-    <div>
-        <h2 th:text="${post.title}"></h2>
-        <p th:text="${post.body}"></p>
+    <h1>That one specific Post!</h1>
+    <div class="row">
+    <div class="col-sm-6">
+    <div class="card">
+    <div class="card-body">
+        <h2 class="card-title" th:text="${post.title}"></h2>
+        <p class="card-text" th:text="${post.body}"></p>
+        <a href="/posts" class="btn btn-success">Back to the listings</a>
+        <a th:href="@{/posts/{id}/update(id=${post.id})}" class="btn btn-warning"> Re-Edit</a>
     </div>
-
+    </div>
+    </div>
+    </div>
     <div th:replace="fragments/footer :: footer"></div>
 </description>
 </html>
