Delete still does not work.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -17,7 +17,7 @@ body {
 
  .card-body {
      background-color: #5f2b80;
-     border: dashed dimgray;
+     border: dashed white;
      padding-bottom: 1%;
 
  }
