--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -4,7 +4,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="myNav">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Important Stuff here ----></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,9 +18,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Post Categories</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Not Active Yet</a>
             </li>
         </ul>
     </div>
