--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -12,7 +12,8 @@
         <h3 class="card-title" th:text="${post.title}"></h3>
         <p class="card-text" th:text="${post.body}"></p>
         <a th:href="@{/posts/{id}/update(id=${post.id})}"><input type="button" value="Edit" class="btn btn-primary" /></a>
-        <input type="button" value="Delete" class="btn btn-danger"/>
+        <a th:href="@{/posts/{id}/delete(id=${post.id})}"><input type="button" value="Delete" class="btn btn-danger" /></a>
+        <!--<input type="button" value="Delete" class="btn btn-danger"/>-->
     </div>
             </div>
         </div>
