--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,8 +3,8 @@
 <head></head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="myNav">
-    <a class="navbar-brand" href="#">Important Stuff here ----></a>
+<nav class="navbar navbar-expand-lg" id="nav" th:fragment="myNav">
+    <a class="navbar-brand">Important Stuff here ----></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,8 +20,13 @@
                 <a class="nav-link" href="#">Post Categories</a>
             </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
     </div>
 </nav>
 
 </body>
 </html>
+
