--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -10,7 +10,13 @@
     <div class="card-body">
         <h2 class="card-title" th:text="${post.title}"></h2>
         <p class="card-text" th:text="${post.body}"></p>
+        <p th:text="${post.user.email}"></p>
+        <img width="300" height="300" th:each="img : ${post.images}" th:src="${post.path}" alt="" />
+        <p th:text="${'Created by:' + post.user.username}"></p>
         <a href="/posts" class="btn btn-success">Back to the listings</a>
+        <p th:each="cat : ${post.categories}">
+            <a th:href="@{/categories/{id}(id=${cat.id}) }" th:text="${cat.name}"></a>
+        </p>
         <a th:href="@{/posts/{id}/update(id=${post.id})}" class="btn btn-warning"> Re-Edit</a>
     </div>
     </div>
