--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #2f8047;
+    background-color: #40807c;
     color: whitesmoke;
     padding: 1%;
 }
 
 #nav {
-    background-color: #5f2b80;
+    background-color: #5c6067;
     border: dashed white;
     padding-bottom: 1%;
 }
@@ -22,7 +22,7 @@ body {
  }
 
  .card-body {
-     background-color: #5f2b80;
+     background-color: #4b7580;
      border: dashed white;
      padding-bottom: 1%;
 
