--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -7,14 +7,15 @@
     <hr />
     <div class="rows">
         <div class="col-sm-6">
+            <div class="card-deck">
             <div class="card">
     <div class="card-body" th:each="post : ${posts}">
         <h3 class="card-title" th:text="${post.title}"></h3>
         <p class="card-text" th:text="${post.body}"></p>
         <a th:href="@{/posts/{id}/update(id=${post.id})}"><input type="button" value="Edit" class="btn btn-primary" /></a>
         <a th:href="@{/posts/{id}/delete(id=${post.id})}"><input type="button" value="Delete" class="btn btn-danger" /></a>
-        <!--<input type="button" value="Delete" class="btn btn-danger"/>-->
     </div>
+            </div>
             </div>
         </div>
     </div>
