--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -6,6 +6,7 @@
     <h1>That one specific Post!</h1>
     <div class="row">
     <div class="col-sm-6">
+    <div class="card-deck">
     <div class="card">
     <div class="card-body">
         <h2 class="card-title" th:text="${post.title}"></h2>
@@ -18,6 +19,7 @@
             <a th:href="@{/categories/{id}(id=${cat.id}) }" th:text="${cat.name}"></a>
         </p>
         <a th:href="@{/posts/{id}/update(id=${post.id})}" class="btn btn-warning"> Re-Edit</a>
+    </div>
     </div>
     </div>
     </div>
