--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Log In</title>
-</head>
+<head th:replace="fragments/header :: head('Post')"></head>
 <body>
+<div th:replace="fragments/navbar :: myNav"></div>
 <h1>Log In</h1>
 <div th:if="${param.error}">
     Invalid Username and Password.
@@ -15,12 +13,12 @@
 <form th:action="@{/login}" th:method="post">
     <div class="form-group">
         <label for="username">Username</label>
-        <input id="username" name="usernem" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="username" placeholder="Enter username" />
+        <input id="username" name="username" type="text" class="form-control" aria-describedby="username" placeholder="Enter username" />
         <small id="username1" class="form-text text-muted">Your unique username</small>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input id="password" name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
+        <input id="password" name="password" type="password" class="form-control" placeholder="Password" />
     </div>
     <button type="submit" value="Log In" class="btn btn-primary">Log In</button>
 </form>
