--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Sign up</title>
-</head>
+<head th:replace="fragments/header :: head('Post')"></head>>
 <body>
+<div th:replace="fragments/navbar :: myNav"></div>
 <h1>Create an account</h1>
 <form th:action="@{/sign-up}" th:method="POST" th:object="${user}">
     <div class="form-group">
